--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<title>Mortality in Taiwan</title>
+	<style>
+	    .counties {
+	        fill:#33474e;
+	    }
+	    .counties :hover {
+	        fill: #7f9ca7;
+	        transition: 0.5s;
+	    }
+	    .county-borders {
+	        fill: none;
+	        stroke: #fff;
+	        stroke-width: 0.5px;
+	    }
+	</style>
 </head>
 <body>
 	<svg width="1380" height="780">
 	</svg>
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 	<script src="main.js"></script>
+	<script src="https://unpkg.com/topojson@3"></script>
+	<div id="app">
+    <svg width='500' height='500' style='border:1px solid #00000060;'>
+        <g class="counties"></g>
+        <path class="county-borders"></path>
+    </svg>
+</div>
 </body>
 </html>
