--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</svg>
 	<script src="https://d3js.org/d3.v7.min.js"></script>
 	<script src="main.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 	<script src="https://unpkg.com/topojson@3"></script>
 	<div id="app">
     <svg width='500' height='500' style='border:1px solid #00000060;'>
