--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	<svg width="1380" height="780">
 	</svg>
 	<script src="https://d3js.org/d3.v7.min.js"></script>
+	<script src="https://unpkg.com/topojson@3"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.0/topojson.min.js"></script>
 	<div id="map-container"></div>
     <div class="tooltip"></div>
 	<script src="main.js"></script>
